syntax = "proto3";
package klyraprotocol.daemons.bridge;

import "gogoproto/gogo.proto";
import "klyraprotocol/bridge/bridge_event.proto";

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/daemons/bridge/api";

// BridgeService defines the gRPC service used by bridge daemon.
service BridgeService {
  // Sends a list of newly recognized bridge events.
  rpc AddBridgeEvents(AddBridgeEventsRequest) returns (AddBridgeEventsResponse);

  // Updates the last confirmed withdraw
  rpc UpdateLastConfirmedWithdrawId(UpdateLastConfirmedWithdrawIdRequest) returns (UpdateLastConfirmedWithdrawIdResponse);
}

// AddBridgeEventsRequest is a request message that contains a list of new
// bridge events. The events should be contiguous and sorted by (unique) id.
message AddBridgeEventsRequest {
  repeated klyraprotocol.bridge.BridgeEvent bridge_events = 1
      [ (gogoproto.nullable) = false ];
}

// AddBridgeEventsResponse is a response message for BridgeEventRequest.
message AddBridgeEventsResponse {}

// UpdateLastConfirmedWithdrawIdRequest is a request message that updates
// the last confimed withdraw on ethereum.
message UpdateLastConfirmedWithdrawIdRequest {
  uint32 last_confirmed_withdraw_id = 1;
}

// UpdateLastConfirmedWithdrawIdResponse is a response message for 
// UpdateLastConfirmedWithdrawIdResponse.
message UpdateLastConfirmedWithdrawIdResponse {}

